opam-version: "2.0"
name: "bech32"
version: "0.1"
maintainer: "Vincent Bernardoff <vb@luminar.eu.org>"
authors: ["Vincent Bernardoff <vb@luminar.eu.org>"]
homepage: "https://github.com/vbmithr/ocaml-bech32"
license: "ISC"
dev-repo: "https://github.com/vbmithr/ocaml-bech32.git"
bug-reports: "https://github.com/vbmithr/ocaml-bech32/issues"
tags: []
depends: [
  "dune" {build & >= "1.0"}
  "rresult" {>= "0.6.0"}
  "astring" {>= "0.8.3"}
]
build: [ "dune" "build" "-j" jobs "-p" name "@install" ]
